--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   create-new-release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3.5.3
@@ -20,4 +22,3 @@ jobs:
         uses: ncipollo/release-action@v1.12.0
         with:
           tag: ${{ steps.version.outputs.version }}
-
